Revision history for Dist-Zilla-Plugin-Twitter

{{$NEXT}}

0.006     2010-04-28 13:10:03 EST5EDT

    - use xauth authentication

0.005     2010-04-27 10:06:14 EST5EDT

    - turn on auto collection of prerequisites (duh)

0.004     2010-04-26 17:12:38 EST5EDT

    - don't index sample distributin for testing

0.003     2010-04-26 00:26:26 EST5EDT

    - no changes -- releasing to test the new URL

0.002     2010-04-26 00:19:42 EST5EDT

    - change url from frepan to the README on cpan.cpantesters.org;
      this is one of the fastest hyperlinks to be available after upload

0.001     2010-04-25 23:46:15 EST5EDT

    - first draft